_sass/niedel.scss
body {
  @extend .blue-grey, .darken-4;
  @extend .blue-grey-text, .text-lighten-4;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

h2 {
  @extend .amber-text, .text-lighten-3 !optional;
  font-size: xx-large;
}

h4 {
  @extend .amber-text, .text-lighten-3 !optional;
  font-size: x-large;
}

h5 {
  font-size: x-large;
}

.education, .learning, .languages {
  @extend .blue-grey, .darken-3;
}

.post-content > h3 {
  @extend .amber-text, .text-lighten-3 !optional;
  font-size: x-large;
}

.p {
  line-height: 1.5;
  font-size: large;
}

.footer-avatar {
  max-height: 150px;
}

p, .cv-details {
  @extend .p;
}

.post-content > ul > li, .post-content > ol > li, .cv li {
  line-height: 1.5;
  font-size: large;
  margin-left: 2em;
  padding-left: 0.5em;
}

.post-content > ul > li, .cv li {
  list-style-type: circle !important;
}

.brand-logo {
  font-size: 1.8rem !important;
}

hr.fade {
  border: 0;
  height: 2px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
}

.content-wrapper, .content-wrapper-cv {
  @extend .blue-grey, .darken-4 !optional;
}

.post-list > li {
  @extend .z-depth-3 !optional;
  @extend .blue-grey, .darken-3 !optional;
  overflow: hidden;
}

.post-excerpt-container {
  //display: flex; // wrecks mobile 2 column -> 1 column shift
}

.post-excerpt-header > h3 {
  margin: 0 0 1rem 0; // Fixed margin
}

.post-excerpt-body > p {
  margin: 0 !important;
}

.post-list > li > .row {
  margin: 0;
}

.post-list-item:last-of-type {
  margin: 0 !important;
}

.post-list {
  padding-left: 0;
  list-style-type: none;
}

.post-title {
  @extend .amber-text, .text-lighten-3 !optional;
}

.post-link {
  background: linear-gradient(to right, #ffe082, #ffb167, #ff7a70, #ff4392, #cf2ec1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.post-link:hover {
  background: linear-gradient(to left, #ffe082, #ffe082);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.top-page-banner-wrapper {
  overflow: hidden;
}

.top-page-banner-container {
  @extend .z-depth-2 !optional;
  position: fixed;
  z-index: -10;
  background-image: linear-gradient(to right, rgba(255, 224, 130, 0.8),rgba(255, 167, 101, 0.75), rgba(240, 109, 100, 0.70), rgba(204, 55, 114, 0.65), rgba(142, 24, 132, 0.6));
  transform: rotate(-1.5deg);
  width: 110%;
  min-height: 350px;
}

.no-margin {
  margin: 0 !important;
}

.no-padding {
  padding: 0 !important;
}

.no-margin-bottom {
  margin-bottom: 0 !important;
}

.no-padding-bottom {
  padding-bottom: 0 !important;
}

.social-media-list {
  list-style: none;
  margin-left: 0;
  text-decoration: none;
}

.svg-icon {
  width: 16px;
  height: 16px;
  display: inline-block;
  fill: #fff;
  margin-right: 10px;
  vertical-align: text-top;
}

.spacer-mobile {
  height: 2rem;
}

.single-page > p > img, .cv img {
  @extend .responsive-img, .circle;
}

.post-content > p > img {
  @extend .responsive-img;
}

ul, ol {
  margin-left: 0;
  padding-left: 0;
}

.flex {
  display: flex;
  flex-wrap: wrap;
}

.flex-element {
  flex: 1;
}

.badge {
  @extend .amber, .lighten-3;
  color: black;
  padding: 0.10em 0.25em 0.10em 0.25em;
  border-radius: 5px;
  font-size: 0.5em;
}

progress[value] {
  /* Reset the default appearance */
  -webkit-appearance: none;
  appearance: none;

  width: 100%;
  max-height: 15px;
}

progress[value]::-webkit-progress-bar {
  @extend .grey, .darken-4;
  border-radius: 5px;
  @extend .z-depth-3;
}

progress[value]::-webkit-progress-value {
  @extend .blue-grey, .darken-3;
  border-radius: 2px;
}

@media #{$medium-and-up} {
  // styles for medium screens and larger
  $margin: 3rem;
  $padding: 3rem;

  .padding-right-half {
    padding-right: $padding / 2;
  }

  p {
    margin: ($margin / 1.5) 0 ($margin / 1.5) 0;
  }

  .cv-details {
    margin: $margin / 2 0 $margin /2  0;
  }

  .education, .learning {
    padding: $padding;
    margin: $margin 0 $margin 0;
  }

  .languages {
    padding: $padding;
    margin: $margin $margin $margin 0;
  }

  .languages:last-of-type {
    margin-right: 0;
  }

  .single-page > p > img {
    max-width: 275px;
    float: right;
  }

  .cv img {
    max-width: 175px;
  }


  .post-excerpt-header {
    min-height: 270px;
  }

  .content-wrapper {
    padding: $padding;
    margin: $margin;
  }

  .content-wrapper-cv {
    margin: $margin;
  }

  .content-wrapper-cv-inner {
    padding: $padding;
  }

  h1 {
    margin: 0 0 $margin 0;
    padding: 0;
  }

  hr.fade {
    margin: $margin 0 $margin 0;
  }

  .post-meta {
    margin-top: $margin / 2;
  }

  .page-footer {
    margin-top: $margin * 2;
  }

  .page-footer > .container,  .footer-copyright > .container{
    padding: 0 $padding 0 $padding;
  }

  .top-page-banner-container {
    margin: -76px 0 $margin -10%;
    padding: ($padding * 2.75) 0 ($padding * 1) 10%;
  }

  .post-list-heading {
    margin: 0 0 $margin 0;
  }

  .post-list > li {
    margin: 0 0 $margin 0;
  }

  .post-excerpt-header {
    padding: $padding;
  }

  .post-excerpt-body {
    padding: $padding;
  }

  .nav-inner-content {
    padding: 0 $padding 0 $padding;
  }

}

@media #{$small-and-down} {
  // styles for small screens and down
  $margin: 1rem;
  $padding: 1rem;

  .padding-right-half {
    padding-right: $padding / 2;
  }

  p {
    margin: $margin 0 $margin 0;
  }

  .cv-details {
    margin: $margin / 2 0 $margin /2  0;
  }

  .education, .learning {
    padding: $padding;
    margin: $margin;
  }

  .languages {
    padding: $padding;
    margin: $margin 0 $margin 0;
  }

  .container {
    width: 100%;
  }

  h1 {
    margin: 0 0 $margin 0;
    padding: 0;
  }

  .post-title {
    font-size: 3em;
  }

  hr.fade {
    margin: $margin 0 $margin 0;
  }

  .post-meta {
    margin-top: $margin / 2;
  }

  .page-footer {
    margin-top: $margin * 2;
  }

  .page-footer > .container,  .footer-copyright > .container{
    padding: 0 $padding 0 $padding;
  }

  .top-page-banner-container {
    margin: -56px 0 $margin -10%;
    padding: ($padding * 2.75) 0 ($padding * 1) 10%;
  }

  .content-wrapper {
    padding: $padding;
    margin: $margin;
  }

  .cv img {
    width: 175px;
    float: none !important;
    text-align: center !important;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }

  .content-wrapper-cv {
    margin: $margin;
  }

  .content-wrapper-cv-inner {
    padding: $padding;
  }

  .post-list-heading {
    margin: 0 0 $margin 0;
  }

  .post-list > li {
    margin: 0 0 $margin 0;
  }

  .post-excerpt-header {
    padding: $padding;
  }

  .post-excerpt-body {
    padding: $padding;
  }

  .top-margin {
    margin-top: $margin * 2  !important;
  }

  .nav-inner-content {
    padding: 0 $padding 0 $padding;
  }

  blockquote {
    border-left: 0;
    margin: 0;
    padding: 0.25rem 0;
    position: relative;
  }

  blockquote p {
    position: relative;
    z-index: 1;
  }

  blockquote p::before {
    content: '\00a0\00a0\00a0\00a0\00a0\00a0';
  }

  blockquote::before {
    content:'“';
    font-size: 8rem;
    color: rgb(255, 224, 130);
    position: absolute;
    top: -2rem;
    left: -0.5rem;
    z-index: 0;
  }

}

/**
 * Syntax highlighting styles
 * All rights reserved: Minima
 */

.language-plaintext {
  @extend .grey, .darken-4;
  @extend .z-depth-1;
  padding: 0.2rem;
}

.highlight {
  @extend .grey, .darken-4;
  @extend .z-depth-3;
  margin: 2rem 0 2rem 0;
  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
  overflow-x: auto;

  .highlighter-rouge & {
    background: #eef;
  }

  .c     { color: #998; font-style: italic } // Comment
  .err   { color: #a61717; background-color: #e3d2d2 } // Error
  .k     { font-weight: normal } // Keyword
  .o     { font-weight: normal } // Operator
  .cm    { color: #998; font-style: italic } // Comment.Multiline
  .cp    { color: #999; font-weight: normal } // Comment.Preproc
  .c1    { color: #998; font-style: italic } // Comment.Single
  .cs    { color: #999; font-weight: normal; font-style: italic } // Comment.Special
  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
  .ge    { font-style: italic } // Generic.Emph
  .gr    { color: #a00 } // Generic.Error
  .gh    { color: #999 } // Generic.Heading
  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
  .go    { color: #888 } // Generic.Output
  .gp    { color: #555 } // Generic.Prompt
  .gs    { font-weight: normal } // Generic.Strong
  .gu    { color: #aaa } // Generic.Subheading
  .gt    { color: #a00 } // Generic.Traceback
  .kc    { font-weight: normal } // Keyword.Constant
  .kd    { font-weight: normal } // Keyword.Declaration
  .kp    { font-weight: normal } // Keyword.Pseudo
  .kr    { font-weight: normal } // Keyword.Reserved
  .kt    { color: #ffda79; font-weight: normal } // Keyword.Type
  .m     { color: #099 } // Literal.Number
  .s     { color: #ffda79
  } // Literal.String
  .na    { color: #ffffff
  } // Name.Attribute
  .nb    { color: #0086B3 } // Name.Builtin
  .nc    { color: #f3f3f3; font-weight: normal } // Name.Class
  .no    { color: #008080 } // Name.Constant
  .ni    { color: #800080 } // Name.Entity
  .ne    { color: #900; font-weight: normal } // Name.Exception
  .nf    { color: #ffda79; font-weight: normal } // Name.Function
  .nn    { color: #555 } // Name.Namespace
  .nt    { color: #000080 } // Name.Tag
  .nv    { color: #efefef
  } // Name.Variable
  .ow    { font-weight: normal } // Operator.Word
  .w     { color: #bbb } // Text.Whitespace
  .mf    { color: #099 } // Literal.Number.Float
  .mh    { color: #099 } // Literal.Number.Hex
  .mi    { color: #099 } // Literal.Number.Integer
  .mo    { color: #099 } // Literal.Number.Oct
  .sb    { color: #d14 } // Literal.String.Backtick
  .sc    { color: #d14 } // Literal.String.Char
  .sd    { color: #d14 } // Literal.String.Doc
  .s2    { color: #d14 } // Literal.String.Double
  .se    { color: #d14 } // Literal.String.Escape
  .sh    { color: #d14 } // Literal.String.Heredoc
  .si    { color: #d14 } // Literal.String.Interpol
  .sx    { color: #d14 } // Literal.String.Other
  .sr    { color: #009926 } // Literal.String.Regex
  .s1    { color: #d14 } // Literal.String.Single
  .ss    { color: #990073 } // Literal.String.Symbol
  .bp    { color: #999 } // Name.Builtin.Pseudo
  .vc    { color: #008080 } // Name.Variable.Class
  .vg    { color: #008080 } // Name.Variable.Global
  .vi    { color: #008080 } // Name.Variable.Instance
  .il    { color: #099 } // Literal.Number.Integer.Long
}

